Improved input margins to avoid cutoff
State margin now large enough to hold "Rhode Island" text without crop at min-width.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,8 +20,8 @@
 
 
 #day1, #day2, #day3, #day4, #day5 {
-    max-width: 100vw;
-    min-width: 200px;
+    max-width: 100%;
+    min-width: 280px;
     margin-bottom: 20px;
 }
 
